<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.user.relcal.MainActivity">

    <item
        android:id="@+id/action_transfer"
        android:orderInCategory="100"
        android:title="@string/action_transfer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_MomentumMatching"
        android:orderInCategory="100"
        android:title="@string/action_momentumMatching"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Helios"
        android:orderInCategory="100"
        android:title="@string/action_helios"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_knockout"
        android:orderInCategory="100"
        android:title="@string/action_knockout"
        app:showAsAction="never" />
</menu>
