<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.user.relcal.MainActivity">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/editText_Pa"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:nextFocusDown="@+id/editText_Pb"
        android:selectAllOnFocus="true"
        android:text="12C"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Pb"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:nextFocusDown="@+id/editText_P1"
        android:selectAllOnFocus="true"
        android:text="2H"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/textViewLB" />

    <EditText
        android:id="@+id/editText_P1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:nextFocusDown="@+id/editText_TLab"
        android:selectAllOnFocus="true"
        android:text="1H"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/textViewComma" />

    <TextView
        android:id="@+id/textViewLB"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="( "
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/editText_Pa" />

    <TextView
        android:id="@+id/textView_P2"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:text="13C"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewRB"
        app:layout_constraintStart_toEndOf="@+id/textViewRB" />

    <TextView
        android:id="@+id/textViewComma"
        android:layout_width="9dp"
        android:layout_height="30dp"
        android:text=","
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pb"
        app:layout_constraintStart_toEndOf="@+id/editText_Pb" />

    <TextView
        android:id="@+id/textViewRB"
        android:layout_width="11dp"
        android:layout_height="wrap_content"
        android:text=")"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_P1"
        app:layout_constraintStart_toEndOf="@+id/editText_P1" />

    <TextView
        android:id="@+id/textView_Pa"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/beam_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_thetaCM" />

    <TextView
        android:id="@+id/textView_4vPa"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Pa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_Pa" />

    <TextView
        android:id="@+id/textView_TLab"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/TLab_label"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_TLab"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_TLab"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/editText_Tmin"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView_TLab"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="274dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:max="180"
        android:min="0"
        android:progress="0"
        app:layout_constraintStart_toEndOf="@+id/textView_thetaCM"
        app:layout_constraintTop_toBottomOf="@+id/textView_TLab" />

    <TextView
        android:id="@+id/textView_thetaCM"
        android:layout_width="63dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/thetaCM_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_TLab" />

    <TextView
        android:id="@+id/textView_Pb"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/target_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Pa" />

    <TextView
        android:id="@+id/textView_4vPb"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Pb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_Pb" />

    <TextView
        android:id="@+id/textView_P1"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/p1_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Pb" />

    <TextView
        android:id="@+id/textView_4vP1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_P1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_P1" />

    <TextView
        android:id="@+id/textView_P2_2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/p2_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_P1" />

    <TextView
        android:id="@+id/textView_4vP2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_P2_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_P2_2" />

    <TextView
        android:id="@+id/textView_theta_reading"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_thetaCM"
        app:layout_constraintStart_toEndOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView_Ex"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/Ex_label"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_TLab"
        app:layout_constraintEnd_toStartOf="@+id/editText_Tmin" />

    <EditText
        android:id="@+id/editText_Tmin"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/editText_Pa"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Ex"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView_QValue"
        android:layout_width="114dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:text="Q : "
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_P2"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.androidplot.xy.XYPlot
                android:id="@+id/plot"
                style="@style/APDefacto.Light"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/ap_transparent"
                app:backgroundColor="@color/ap_transparent"
                app:domainTitle="@string/plot_Xaxis"
                app:graphBackgroundColor="@color/ap_transparent"
                app:lineLabels="left|bottom"
                app:rangeTitle="@string/plot_Yaxis"
                app:renderMode="use_background_thread" />


            <com.androidplot.xy.XYPlot
                android:id="@+id/plot2"
                style="@style/APDefacto.Light"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/ap_transparent"
                app:backgroundColor="@color/ap_transparent"
                app:domainTitle="@string/plot2_Xaxis"
                app:graphBackgroundColor="@color/ap_transparent"
                app:layout_constraintTop_toBottomOf="@+id/plot"
                app:lineLabels="left|bottom"
                app:rangeTitle="@string/plot2_Yaxis"
                app:renderMode="use_background_thread" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_TLab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>