<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.user.relcal.MainActivity">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/editText_Pa"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:nextFocusDown="@+id/editText_Pb"
        android:selectAllOnFocus="true"
        android:text="12C"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Pb"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:nextFocusDown="@+id/editText_P1"
        android:selectAllOnFocus="true"
        android:text="2H"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/textViewLB" />

    <EditText
        android:id="@+id/editText_P1"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:nextFocusDown="@+id/editText_TLab"
        android:selectAllOnFocus="true"
        android:text="1H"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/textViewComma" />

    <TextView
        android:id="@+id/textViewLB"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="( "
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pa"
        app:layout_constraintStart_toEndOf="@+id/editText_Pa" />

    <TextView
        android:id="@+id/textView_P2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="13C"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewRB"
        app:layout_constraintStart_toEndOf="@+id/textViewRB" />

    <TextView
        android:id="@+id/textViewComma"
        android:layout_width="9dp"
        android:layout_height="30dp"
        android:text=","
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Pb"
        app:layout_constraintStart_toEndOf="@+id/editText_Pb" />

    <TextView
        android:id="@+id/textViewRB"
        android:layout_width="11dp"
        android:layout_height="30dp"
        android:text=")"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_P1"
        app:layout_constraintStart_toEndOf="@+id/editText_P1" />

    <TextView
        android:id="@+id/textView_TLab"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/TLab_label"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_TLab"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_TLab"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/editText_Bfield"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView_TLab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Tmin_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/TMin_label"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_TLab"
        app:layout_constraintEnd_toStartOf="@+id/textView_Tmin" />

    <TextView
        android:id="@+id/textView_Tmin"
        android:layout_width="86dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:nextFocusDown="@+id/editText_Pa"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Tmin_label"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView_QValue"
        android:layout_width="114dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:text="Q : "
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_P2"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.androidplot.xy.XYPlot
                android:id="@+id/plot"
                style="@style/APDefacto.Light"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/ap_transparent"
                app:backgroundColor="@color/ap_transparent"
                app:domainTitle="@string/plotH1_Xaxis"
                app:graphBackgroundColor="@color/ap_transparent"
                app:lineLabels="left|bottom"
                app:rangeTitle="@string/TLab_label"
                app:renderMode="use_background_thread" />


            <com.androidplot.xy.XYPlot
                android:id="@+id/plot2"
                style="@style/APDefacto.Light"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/ap_transparent"
                app:backgroundColor="@color/ap_transparent"
                app:domainTitle="@string/plotH1_Xaxis"
                app:graphBackgroundColor="@color/ap_transparent"
                app:layout_constraintTop_toBottomOf="@+id/plot"
                app:lineLabels="left|bottom"
                app:rangeTitle="@string/plotH2_Yaxis"
                app:renderMode="use_background_thread" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView_Bfield"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Bfield_label"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_thetaCM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_TLab" />

    <EditText
        android:id="@+id/editTex_Bfield"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:inputType="numberDecimal"
        android:text="2.0"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Bfield"
        app:layout_constraintStart_toEndOf="@+id/textView_Bfield" />

    <TextView
        android:id="@+id/textView_slope"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="slope : "
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTex_Bfield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTex_Bfield" />

    <TextView
        android:id="@+id/textView_Ex"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/Ex_label"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_thetaCM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Bfield" />

    <SeekBar
        android:id="@+id/seekBar_Ex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textView_ExShow"
        app:layout_constraintStart_toEndOf="@+id/textView_Ex"
        app:layout_constraintTop_toTopOf="@+id/textView_Ex" />

    <TextView
        android:id="@+id/textView_ExShow"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Ex"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_thetaCM"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/thetaCM_label"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Ex" />

    <SeekBar
        android:id="@+id/seekBar_thetaCM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="180"
        app:layout_constraintEnd_toStartOf="@+id/textView_thetaCM_Show"
        app:layout_constraintStart_toEndOf="@+id/textView_thetaCM"
        app:layout_constraintTop_toTopOf="@+id/textView_thetaCM" />

    <TextView
        android:id="@+id/textView_thetaCM_Show"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_thetaCM"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>